--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -18,6 +18,9 @@
 #
 # To learn more, please read the Rails Internationalization guide
 # available at http://guides.rubyonrails.org/i18n.html.
-
 en:
+  user_mailer:
+    password_rese:
+      subject: "%{user}, welcome to Rails Guides!"
+en: 
   hello: "Hello world"
